kubernetes/apps/network/external-service/avr/endpointslice.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/discovery.k8s.io/endpointslice_v1.json
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: internal-avr
  labels:
    kubernetes.io/service-name: internal-avr
addressType: IPv4
endpoints:
  - addresses:
      - ${AVR_IP}
ports:
  - port: 11080
    name: http
    protocol: TCP
