kubernetes/apps/network/external-service/avr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: internal-avr
spec:
  clusterIP: None
  ports:
    - port: 80
      targetPort: 11080
      name: http
