kubernetes/apps/network/external-service/avr/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: external-service-httproute-avr
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: AVR
    gethomepage.dev/group: External
    gethomepage.dev/icon: mdi-server-network
    # external target — no pods to health-check
    gethomepage.dev/pod-selector: ""
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network

  hostnames:
    - avr.${SECRET_DOMAIN}
  rules:
    - backendRefs:
        - name: internal-avr
          port: 80
