kubernetes/apps/network/external-service/avr/ingress.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: internal-avr
  labels:
    kubernetes.io/service-name: internal-avr
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.0.101
ports:
  - port: 11080
    name: http
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: internal-avr
spec:
  ports:
    - port: 80
      targetPort: 11080
      name: http
  clusterIP: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-service-ingress-avr
  annotations:
    external-dns.alpha.kubernetes.io/target: "internal.${SECRET_DOMAIN}"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: internal
  rules:
    - host: avr.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: internal-avr
                port:
                  number: 80
